5.1.4 -> 5.1.5:
    - jbj: use macro, not /bin/bash, in scriptlet_requires.
    - jbj: don't run empty transactions, avoiding obscure error msg.
    - jbj: permit a negative index as alias for the last problem added to set.
    - jbj: warn if package is not added because of platform affinity patterns.
    - proyvind: lzdio: fix build with recent api changes.
    - jbj: fix: initialize next element of rpmlog store correctly.
    - jbj: update {nl,id,pl}.po (Translation Project).
    - rse: rpmio: allow newer fnmatch to build on non-Linux platforms, too.
    - jbj: rpmio: upgrade fnmatch to version that implements FNM_EXTMATCH.
    - jbj: hdrfmt: triggerconds header extension display was incorrect.
    - jbj: don't install symclash.* to avoid picking up a dependency on python.
    - jbj: fix: check added file names against installed conflicts.
    - jbj: update nl.po (Translation Project).
    - rpm.org: permit hardlinks only with regular files.
    - jbj: fix: tagType() with multiple aliases returned the wrong type.
    - jbj: sqlite: fix: insure that tagType() returns result from stable sort.
    - rse: upgrade build environment to GNU libtool 2.2.6
    - jbj: lua: fix: don't unlink a non-existent scriptlet file.
    - jbj: display error msg for lusers attempting "rpm -qp /bin" (#461362).
    - jbj: WR: remove version from config paths.
    - jbj: lua: fix: don't close dup'd stdout running lua scripts.
    - jbj: macosx: avoid multiple definitions of _program_name.
    - jbj: merge po files.
    - jbj: don't expand removed python/rpm/Makefile.in.
    - rse: upgrade embedded Lua from version 5.1.3 to 5.1.4
    - jbj: WR: remove --with-path-versioned in devtool targets.
    - jbj: WR: remove $(VERION) from macros paths in devtool targets.
    - jbj: WR: fix: cleanup patch integration thinkos.
    - jbj: WR: mark wrs-rpm-enable-macro-validation.patch (but leave disabled).
    - jbj: WR: fix: add rt-reloc-wrapper.sh to EXTRAS_DIST.