@@ -845,7 +845,10 @@ void rpmtsSetScriptFd(rpmts ts, FD_t scriptFd)
 
 int rpmtsSELinuxEnabled(rpmts ts)
 {
-    return (ts != NULL ? (ts->selinuxEnabled > 0) : 0);
+    int selinuxEnabled = 0;
+    if (ts)
+	selinuxEnabled = (ts->selinuxEnabled > 0);
+    return selinuxEnabled;
 }
 
 int rpmtsChrootDone(rpmts ts)
@@ -863,23 +866,6 @@ int rpmtsSetChrootDone(rpmts ts, int chrootDone)
 	ts->chrootDone = chrootDone;
     }
     return ochrootDone;
-}
-
-rpmsx rpmtsREContext(rpmts ts)
-{
-    return ( (ts && ts->sx ? rpmsxLink(ts->sx, __func__) : NULL) );
-}
-
-int rpmtsSetREContext(rpmts ts, rpmsx sx)
-{
-    int rc = -1;
-    if (ts != NULL) {
-	ts->sx = rpmsxFree(ts->sx);
-	ts->sx = rpmsxLink(sx, __func__);
-	if (ts->sx != NULL)
-	    rc = 0;
-    }
-    return rc;
 }
 
 uint32_t rpmtsGetTid(rpmts ts)
