@@ -741,24 +741,6 @@ int rpmtsSetChrootDone(rpmts ts, int chrootDone)
 	/*@modifies ts @*/;
 
 /** \ingroup rpmts
- * Get file security context patterns.
- * @param ts		transaction set
- * @return		file security context patterns
- */
-/*@null@*/
-rpmsx rpmtsREContext(const rpmts ts)
-	/*@modifies ts @*/;
-
-/** \ingroup rpmts
- * Get file security context patterns.
- * @param ts		transaction set
- * @param sx		security context patterns
- * @return		0 on success
- */
-int rpmtsSetREContext(rpmts ts, rpmsx sx)
-	/*@modifies ts, sx @*/;
-
-/** \ingroup rpmts
  * Get transaction id, i.e. transaction time stamp.
  * @param ts		transaction set
  * @return		transaction id
